# nlp-cooking

./: .gitignore  README.md  pyproject.toml  setup.py
nlp_cooking/_normalize/: _compose.py  base.py  normalizers.py  patterns.py
nlp_cooking/embedding/: embedding.py
nlp_cooking/filters/: __init__.py  _filters.py
nlp_cooking/normalize/: __init__.py
nlp_cooking/texttransform/: base.py  compose.py
nlp_cooking/texttransform/normalizers/: __init__.py  base.py  patterns.py
nlp_cooking/texttransform/normalizers/ja/: __init__.py  _normalizations.py
nlp_cooking/tokenizer/ja/: __init__.py  mecab.py  sudachi.py
tokenizer/: base.py
tokenizer/ja/: mecab.py
